create table commande create resource, service and repository

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,24 @@
+#DataSource settings
+spring.datasource.url=jdbc:postgresql://localhost:5434/
+spring.datasource.username=postgres
+spring.datasource.password=dev
+spring.datasource.driver-class-name=org.postgresql.Driver
 
+
+#jpa settings
+spring.jpa.database=postgresql
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.naming.strategy=org.hibernate.cfg.ImprovedNamingStrategy
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults= false
+
+spring.flyway.enabled=true
+spring.flyway.url=jdbc:postgresql://localhost:5434/postgres
+spring.flyway.user=postgres
+spring.flyway.password=dev
+spring.flyway.driver-class-name=org.postgresql.Driver
+spring.flyway.schemas=public
+spring.flyway.locations=classpath:db/migration
+
+catalog.service.url=http://localhost:8080/api/v1
