Add docker-file and update docker-compose

--- a/src/main/resources/application-integration.properties
+++ b/src/main/resources/application-integration.properties
@@ -1,5 +1,5 @@
 #DataSource settings
-spring.datasource.url=jdbc:postgresql://localhost:5434/
+spring.datasource.url=jdbc:postgresql://192.168.1.12:5434/
 spring.datasource.username=postgres
 spring.datasource.password=dev
 spring.datasource.driver-class-name=org.postgresql.Driver
@@ -14,11 +14,11 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults= false
 
 spring.flyway.enabled=true
-spring.flyway.url=jdbc:postgresql://localhost:5434/postgres
+spring.flyway.url=jdbc:postgresql://192.168.1.12:5434/postgres
 spring.flyway.user=postgres
 spring.flyway.password=dev
 spring.flyway.driver-class-name=org.postgresql.Driver
 spring.flyway.schemas=public
 spring.flyway.locations=classpath:db/migration
 
-catalog.service.url=http://localhost:8080/api/v1
+catalog.service.url=http://192.168.1.12:10000/api/v1
