--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -14,3 +14,13 @@ services:
       - "5435:5432"
     environment:
       - POSTGRES_PASSWORD=prod
+  commande:
+    build:
+      context: ./
+      dockerfile: Dockerfile
+    container_name: commande
+    image: commande
+    ports:
+      - "10000:8080"
+    environment:
+      SPRING_PROFILES_ACTIVE: integration
